[package]
name = "grove"
version = "0.1.0"
description = "Grove desktop application"
authors = ["Stephen"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "grove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.3", features = [] }

[dependencies]
tauri = { version = "=2.9.5", features = [] }
tauri-plugin-shell = "=2.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
